Code Completed Updated README
